// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmField allows for style customization 1`] = `
<input
  class="tm-field tm-field-size-lg"
  step="0.000001"
  type="text"
/>
`;

exports[`TmField displays a number input 1`] = `
<input
  class="tm-field"
  step="0.000001"
  type="number"
/>
`;

exports[`TmField displays a textarea 1`] = `
<textarea
  class="tm-field"
/>
`;

exports[`TmField displays as a select 1`] = `
<div
  class="tm-select"
>
  <select
    class="tm-field tm-field-select"
  >
    <option
      disabled="disabled"
      hidden="hidden"
      selected="selected"
      value=""
    >
      
      Select option...
    
    </option>
     
  </select>
   
  <div
    class="tm-field-select-addon"
  >
    <i
      class="material-icons notranslate"
    >
      arrow_drop_down
    </i>
  </div>
</div>
`;

exports[`TmField displays as a select 2`] = `
<div
  class="tm-select"
>
  <select
    class="tm-field tm-field-select"
  >
    <option
      disabled="disabled"
      hidden="hidden"
      selected="selected"
      value=""
    >
      
      Select option...
    
    </option>
     
    <option
      value="1"
    >
      
        1
      
    </option>
    <option
      value="2"
    >
      
        2
      
    </option>
  </select>
   
  <div
    class="tm-field-select-addon"
  >
    <i
      class="material-icons notranslate"
    >
      arrow_drop_down
    </i>
  </div>
</div>
`;

exports[`TmField displays as a select 3`] = `
<div
  class="tm-select"
>
  <select
    class="tm-field tm-field-select"
  >
    <option
      disabled="disabled"
      hidden="hidden"
      selected="selected"
      value=""
    >
      
      Select a number...
    
    </option>
     
    <option
      value="1"
    >
      
        1
      
    </option>
    <option
      value="2"
    >
      
        2
      
    </option>
  </select>
   
  <div
    class="tm-field-select-addon"
  >
    <i
      class="material-icons notranslate"
    >
      arrow_drop_down
    </i>
  </div>
</div>
`;

exports[`TmField has the expected html structure 1`] = `
<input
  class="tm-field"
  step="0.000001"
  type="text"
/>
`;
